fix-margin-gap

--- a/css/styles.css
+++ b/css/styles.css
@@ -389,6 +389,10 @@ button {
   align-items: center;
 }
 
+.footer-social-box {
+  margin-bottom: 72px;
+}
+
 .footer-social-text {
   color: #fff;
   font-weight: 500;
@@ -400,7 +404,6 @@ button {
 .footer-social-list {
   display: flex;
   gap: 16px;
-  margin-bottom: 72px;
   justify-content: center;
 }
 
@@ -694,9 +697,12 @@ button {
   max-width: 480px;
   margin-left: auto;
   margin-right: auto;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
-.burger-box .close-btn {
+.mobile-menu-close-btn {
   background-color: rgba(231, 233, 252, 0.4);
 }
 
@@ -704,8 +710,8 @@ button {
   margin-bottom: 40px;
 }
 
-.mobile-menu-item:last-child {
-  margin-bottom: 168px;
+.mobile-menu {
+  margin-bottom: auto;
 }
 
 .mobile-menu-link {
